--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
 		
 		<!-- TODO: Replace this to a project description and url at github -->
 		<trac.release.history.number>22</trac.release.history.number>
+		
+		<spring.boot.version>2.0.0.M6</spring.boot.version>
 
 	</properties>
 
@@ -215,6 +217,14 @@
 					<preparationGoals>clean install</preparationGoals>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<reporting>
@@ -244,7 +254,7 @@
 	</reporting>
 
 	<!-- MORE PROJECT INFORMATION -->
-	<name>dsh</name>
+	<name>DSH</name>
 	<description>Document Smart Highlights</description>
 	<!-- <url>...</url> -->
 	<!-- <inceptionYear>...</inceptionYear> -->
@@ -269,5 +279,6 @@
 <!-- 	</profiles> -->
   <modules>
     <module>DSH-rest-api</module>
+    <module>DSH-doc-indexer-worker</module>
   </modules>
 </project>
