--- a/DSH-doc-indexer-worker/pom.xml
+++ b/DSH-doc-indexer-worker/pom.xml
@@ -47,10 +47,9 @@
 			<artifactId>spring-boot-starter-data-solr</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>1.1.6</version>
-		</dependency>
+			<groupId>com.mriss.products.dsh</groupId>
+			<artifactId>DSH-data</artifactId>		
+		</dependency>				
 	</dependencies>
 	<!-- <dependencyManagement>...</dependencyManagement> -->
 	<!-- <modules>...</modules> -->
