--- a/dsh-test-dataset/.gitignore
+++ b/dsh-test-dataset/.gitignore
@@ -1,1 +1,12 @@
+# Maven
+target/**/*
+
+#Eclipse 
+*.project
+*.classpath
+*.settings
 /target/
+/.settings/
+/.classpath/
+/.project/
+**/target/**/*
