adding swagger suport

--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,23 @@
 	        <url>http://repo.spring.io/snapshot</url> 
 	    </repository>	    	    	
 	</repositories>
-	<!--  <pluginRepositories>...</pluginRepositories>-->
+	<pluginRepositories>
+		<pluginRepository> 
+	        <id>repository.spring.release</id> 
+	        <name>Spring GA Repository</name> 
+	        <url>http://repo.spring.io/release</url> 
+	    </pluginRepository>
+	    <pluginRepository> 
+	        <id>repository.spring.milestone</id> 
+	        <name>Spring Milestone Repository</name> 
+	        <url>http://repo.spring.io/milestone</url> 
+	    </pluginRepository>
+	    <pluginRepository> 
+	        <id>repository.spring.snapshot</id> 
+	        <name>Spring Snapshot Repository</name> 
+	        <url>http://repo.spring.io/snapshot</url> 
+	    </pluginRepository>	    	    				
+	</pluginRepositories>	
 	<!--  <distributionManagement>...</distributionManagement>-->
 <!-- 	 <profiles> -->
 <!-- 	</profiles> -->
