--- a/DSH-rest-api/pom.xml
+++ b/DSH-rest-api/pom.xml
@@ -220,7 +220,12 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>						
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring.boot.version}</version>
+			</plugin>									
 		</plugins>
 		<pluginManagement>
 			<plugins>
