site generation configured and locally tested with site staging

--- a/DSH-doc-analyser/DSH-doc-processor-worker/pom.xml
+++ b/DSH-doc-analyser/DSH-doc-processor-worker/pom.xml
@@ -130,7 +130,7 @@
 	<!-- </reporting> -->
 
 	<!-- MORE PROJECT INFORMATION -->
-	<name>DSH-doc-processor-worker</name>
+	<name>DSH - Document Processor Worker</name>
 	<description>Document Smart Highlights Document Processor Worker</description>
 	<!-- <url>...</url> -->
 	<!-- <inceptionYear>...</inceptionYear> -->
