--- a/DSH-doc-analyser/DSH-keyword-extractor/pom.xml
+++ b/DSH-doc-analyser/DSH-keyword-extractor/pom.xml
@@ -113,7 +113,7 @@
 	<!-- </reporting> -->
 
 	<!-- MORE PROJECT INFORMATION -->
-	<name>DSH-keyword-extractor</name>
+	<name>DSH - Document Keyword Extractor</name>
 	<description>Document Smart Highlights Keyword Extractor</description>
 	<!-- <url>...</url> -->
 	<!-- <inceptionYear>...</inceptionYear> -->
