--- a/DSH-doc-analyser/pom.xml
+++ b/DSH-doc-analyser/pom.xml
@@ -131,7 +131,7 @@
 	<!-- </reporting> -->
 
 	<!-- MORE PROJECT INFORMATION -->
-	<name>DSH-doc-analyser</name>
+	<name>DSH - Document Analyzer</name>
 	<description>Document Smart Highlights Analyzer</description>
 	<!-- <url>...</url> -->
 	<!-- <inceptionYear>...</inceptionYear> -->
