--- a/DSH-doc-indexer-worker/pom.xml
+++ b/DSH-doc-indexer-worker/pom.xml
@@ -126,7 +126,7 @@
 	<!-- </reporting> -->
 
 	<!-- MORE PROJECT INFORMATION -->
-	<name>DSH-doc-indexer-worker</name>
+	<name>DSH - Document Indexer Worker</name>
 	<description>DSH Document Indexer Worker</description>
 	<!-- <url>...</url> -->
 	<!-- <inceptionYear>...</inceptionYear> -->
