--- a/DSH-rest-api/pom.xml
+++ b/DSH-rest-api/pom.xml
@@ -262,7 +262,7 @@
 	<!-- </reporting> -->
 
 	<!-- MORE PROJECT INFORMATION -->
-	<name>DSH-rest-api</name>
+	<name>DSH REST API</name>
 	<description>Document Smart Highlights REST API</description>
 	<!-- <url>...</url> -->
 	<!-- <inceptionYear>...</inceptionYear> -->
