--- a/dsh-test-dataset/pom.xml
+++ b/dsh-test-dataset/pom.xml
@@ -116,7 +116,7 @@
 	<!-- </reporting> -->
 
 	<!-- MORE PROJECT INFORMATION -->
-	<name>dsh-test-dataset</name>
+	<name>DSH Test Data Set</name>
 	<description>Document Smart Highlight Test Dataset</description>
 	<!-- <url>...</url> -->
 	<!-- <inceptionYear>...</inceptionYear> -->
