--- a/pom.xml
+++ b/pom.xml
@@ -111,25 +111,6 @@
 				<targetPath>${project.build.directory}/generated-site</targetPath>
 				<filtering>false</filtering>
 			</resource>
-			<resource>
-				<directory>src/site</directory>
-				<includes>
-					<include>**/*.apt</include>
-				</includes>
-				<targetPath>${project.build.directory}/generated-site-html</targetPath>
-				<filtering>true</filtering>
-			</resource>
-			<resource>
-				<directory>src/site</directory>
-				<includes>
-					<include>**/*</include>
-				</includes>
-				<excludes>
-					<exclude>**/*.apt</exclude>
-				</excludes>
-				<targetPath>${project.build.directory}/generated-site-html</targetPath>
-				<filtering>false</filtering>
-			</resource>
 		</resources>
 		<plugins>
 			<plugin>
@@ -194,44 +175,13 @@
 							</resources>
 						</configuration>
 					</execution>
-					<execution>
-						<id>copy-site-resources-for-html-site</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>.</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src/site</directory>
-									<includes>
-										<include>**/*.apt</include>
-									</includes>
-									<targetPath>${project.build.directory}/generated-site-html</targetPath>
-									<filtering>true</filtering>
-								</resource>
-								<resource>
-									<directory>src/site</directory>
-									<includes>
-										<include>**/*</include>
-									</includes>
-									<excludes>
-										<exclude>**/*.apt</exclude>
-									</excludes>
-									<targetPath>${project.build.directory}/generated-site-html</targetPath>
-									<filtering>false</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
 				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
 				<configuration>
-					<siteDirectory>${project.build.directory}/generated-site-html</siteDirectory>
+					<siteDirectory>src/site-desc</siteDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -280,7 +230,7 @@
 	</reporting>
 
 	<!-- MORE PROJECT INFORMATION -->
-	<name>DSH</name>
+	<name>DSH - Document Smart Highlights</name>
 	<description>Document Smart Highlights</description>
 	<!-- <url>...</url> -->
 	<!-- <inceptionYear>...</inceptionYear> -->
@@ -294,7 +244,11 @@
 	<!-- <issueManagement>...</issueManagement> -->
 	<!-- <ciManagement>...</ciManagement> -->
 	<!-- <mailingLists>...</mailingLists> -->
-	<!-- <scm>...</scm> -->
+	<scm>
+		<connection>scm:git:https://github.com/MRISS-Projects/dsh.git</connection>
+		<developerConnection>scm:git:https://github.com/MRISS-Projects/dsh.git</developerConnection>
+		<url>https://github.com/MRISS-Projects/dsh</url>
+	</scm>
 	<prerequisites>
 		<maven>3.3.9</maven>
 	</prerequisites>
